# shcard-a2a

./: .env.example  README.md  deploy_to_agent_engine.py  master_agent_ui.py  pyproject.toml
master_agent/: .env.example  README.md  agent.py  master_agent.py
remote_sub_agents/card_recommend_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_sub_agents/transaction_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
